# portal-empleados

./: .gitignore  README.md  build.bat  check_db.py  check_pkg_db.py  chronos.spec.template  extract_json.py  extract_pb.py  fix_button.ps1  pyproject.toml  requirements.txt  run_app.py  search_api.py  search_run_app.py
backend/: create_formato_template.py  docx_generator.py  main.py  reference_counter.json  scheduler_engine.py
backend/routes/: __init__.py  config.py  empleados.py  helpers.py  horarios.py  planillas.py  shared_models.py
export_horarios/: Semana 12.xlsm
frontend/: app.js  design-tokens.css  generator_params_panel.js  index.html  planillas_ui.js  pref_plantillas_ui.js  style.css  utilities.css
frontend/css/: components.css  (+5 more)
openspec/: config.yaml
packaging/: README.md  build.ps1  run_build_and_mark.ps1
planillas/: Planilla_de_Pago.xlsx  app.py  app_dis.txt  database.py  generador_boletas.py  horario_db.py  horario_excel_import.py  pb_dump_cf59.txt  planilla.py  planilla_dis.txt  planilla_layout.py  prestamo_sync.py
tests/: conftest.py
tmp/: debug_oficina.py  excel_inspection.txt  excel_inspection_report.txt  find_arrows.py  get_thursday_4488.py  history_data.txt  inspect_excel.py  inspect_history.py  inspect_history_v2.py  inspect_history_v3.py  patch_checked.py  patch_soft_pref.py  scan_ascii.txt  scan_out.txt  scan_result.txt  scan_sheets.py  scan_sheets2.py  smoke_out.txt  smoke_parser.py  test_edge_cases.py  test_manual_assign.py  test_oficina.py  test_parser_logic.py  test_rotation_fix.py
tools/: validar_app.ps1  validate_app.py
(+46 files in other folders)
